Fix timer height issue on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -104,7 +104,7 @@ body, html {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: calc(100vh - 250px);
+  height: 100%;
 }
 
 .timer-display {
